fix: z-index popup

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,4 +10,5 @@
   justify-content: center;
   align-items: center;
   display: none;
+  z-index: 2;
 }
